--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "^4.18.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
